landing_page and feature

--- a/server/views/index.handlebars
+++ b/server/views/index.handlebars
@@ -32,7 +32,7 @@
           </form>
           <div>
             <button class="api">
-              <a href="/free">Try for Free</a>
+              <a href="/home">Try for Free</a>
             </button>
           </div>
         </div>
