--- a/server/public/css/home.css
+++ b/server/public/css/home.css
@@ -1,23 +1,33 @@
 body {
-    display: flex;
-    min-height: 100vh; /* Set minimum height for viewport */
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    height: 100vh;
-    background-color: #F4F7FD;
-    overflow: hidden;
+  min-height: 100vh; /* Set minimum height for viewport */
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-color: #F4F7FD;
+  overflow: hidden;
+  display: flex;
+  }
+  
+.main-content .header button {
+  float: left;
 }
 
 .App {
     display: flex;
-    /* background-color: u.color(main); */
+}
+
+.button {
+  display: flex;
+}
+
+.button button {
+  width: 70%;
+  margin: 0 auto;
 }
   
 /* Sidebar */
 .sideBar {
-    /* position: relative; */
     padding-left: 0;
     padding-top: 50px;
   
@@ -26,7 +36,12 @@ body {
     width: 300px;
     height: 100vh;
     padding-bottom: 40px;
-    /* display: none; */
+  }
+
+  .sideBar button {
+    margin: 0 auto;
+    width: 90%;
+    margin-inline: 10px;
   }
   
   .allBoards > p {
@@ -35,7 +50,6 @@ body {
     padding-left: 45px;
     letter-spacing: 2.4px;
     font-size: 12px;
-    /* color: g.$mediumGray; */
     font-weight: 700;
   }
   
@@ -51,27 +65,22 @@ body {
       cursor: pointer;
   
       &:hover:not(.active) {
-        /* background-color: g.$lightBlue; */
         color: red;
   
         svg path {
           fill: white;
         }
       }
-      
-      
     }
   
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding-right: 20px;
-    /* color: g.$mediumGray; */
     font-size: 20px;
     font-weight: 700;
   
     .active {
-      /* background-color: g.$darkBlue; */
       color: white;
     }
   }
@@ -111,6 +120,7 @@ body {
     min-width: 100%;
     left: 350px;
     padding: 30px;
+    margin-top: 30px;
     /* transform: translateX(u.rem(-350)); */
   }
   
@@ -170,34 +180,20 @@ body {
       gap: 15px;
       margin-bottom: 20px;
     }
-    &__color {
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-    }
-  
-    &__tasks {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-  
-    &__title{
-      text-transform: uppercase;
-      letter-spacing: 2.4px;
-      /* color: g.$mediumGray; */
-    }
   }
   
+  .column__tasks {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
   .column__tasks.empty {
     height: 94%;
-    /* border: 1px dashed g.$mediumGrayOpacity; */
     border-width: 2px;
     border-radius: 10px;
   }
   
   .column__new {
-    /* width: u.rem(300); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -205,14 +201,10 @@ body {
     margin-top: 42px;
     border-radius: 6px;
   
-    /* background: g.$mediumGrayGradient; */
-  
     span {
       display: flex;
       align-items: center;
       gap: 8px;
-  
-      /* color: u.color(subTitle); */
     }
   }
 
@@ -228,12 +220,69 @@ body {
       filter: opacity(45%);
     }
     
-    p {
-      /* color: g.$mediumGray; */
-    }
-    
     h3 {
-      /* color: u.color(title); */
       margin-bottom: 20px;
     }
   }
+
+/* Modal Style */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 8px;
+
+}
+
+.modal-content form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#deleteBoardButton {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 20px;
+}
+
+#deleteBoardButton:hover {
+  background-color: #ff1a1a;
+}
